ecmascript/parser/tests/typescript-errors/tsc/classes/constructorDeclarations/constructorParameters/readonlyInConstructorParameters/input.ts.stderr
error[1029]: 'public' modifier must precede 'readonly' modifier.
 --> $DIR/tests/typescript-errors/tsc/classes/constructorDeclarations/constructorParameters/readonlyInConstructorParameters/input.ts:3:26
  |
3 |     constructor(readonly public x: number) { }
  |                          ^^^^^^

