ecmascript/parser/tests/typescript-errors/tsc/classes/constructorDeclarations/constructorParameters/readonlyInConstructorParameters/input.ts

class E {
    constructor(readonly public x: number) { }
}

